<!--suppress LongLine -->
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Strings related to goods listing -->
    <string name="app_name">The360Estate</string>
    <string name="imgViewID" translatable="false">image__view_description</string>
    <string name="title_texte" translatable="false">title text</string>
    <string name="description_text">description text</string>
    <string name="rooms">rooms</string>
    <string name="types_of_house">Types of house</string>
    <string name="cities">Cities</string>
    <string name="Filter">Filter</string>
    <array name="typeOfHouses">
        <item>@string/all</item>
        <item>@string/apartment</item>
        <item>@string/house</item>
        <item>@string/building</item>
    </array>
    <string name="all">All</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="building">Building</string>
    <string name="erase">Erase</string>
    <string name="description" translatable="false">There worse by an of miles civil.
        Manner before lively wholly am mr indeed expect.
        Among every merry his yet has her. You mistress get
        dashwood children off. Met whose marry under the merit.
        In it do continual consulted no listening. Devonshire
        sir sex motionlesstravelling six themselves. So colonel
        as greatly shewing herself observe ashamed.
        Demands minutes regular ye to detract is.
    </string>
    <string name="text_title">Informations</string>
    <string name="description_title">Cute little kitten</string>
    <string name="button_text">Panoramic View</string>
    <string name="text_currency" translatable="false">CHF</string>
    <string name="text_location_surface" translatable="false">%1$s, %2$s m \u00B2, %3$s %4$s</string>
    <string name="text_price_type" translatable="false">%1$s %2$s, %3$s</string>
    <string name="location_separator">in</string>
    <string name="price_separator">for</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">HouseView360</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Sign in</string>
    <string name="action_goto_registration">Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password" tools:ignore="UnusedResources">This password is incorrect</string>
    <string name="error_field_required" tools:ignore="UnusedResources">This field is required</string>
    <string name="error_login_unsuccessful">Error when logging in, try again.</string>
    <string name="permission_rationale" tools:ignore="UnusedResources">Contacts permissions are needed for providing
        email completions.
    </string>
    <string name="info_login_successful">Login successful</string>

    <!-- Strings related to registering -->
    <string name="prompt_password_again" tools:ignore="UnusedResources">Password (double check)</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="hint_register_name">Name</string>
    <string name="hint_register_lastname">Last name</string>
    <string name="action_register">Register</string>
    <string name="error_empty_field">Please fill in all fields</string>
    <string name="error_unmatching_passwords">Entered passwords don\'t match</string>
    <string name="error_registration_unsuccessful">An error occurred when registering, please make
        sure you have access to the network and try again</string>
    <string name="info_registration_successful">Registration was successful, you may log in</string>
    <string name="title_activity_register">Register</string>
    <string name="error_user_already_exists">Account already exists for this username.</string>

    <!-- Strings related to 3D debugging -->
    <string name="debug_camera_rotation" translatable="false">CamRX=%1$.2f CamRY=%2$.2f CamRZ=%3$.2f</string>
    <string name="debug_sensor_rotation" translatable="false">SenRX=%1$.2f SenRY=%2$.2f SenRZ=%3$.2f</string>

    <!-- Strings related to Logout -->
    <string name="LogOut">Logout</string>

    <!-- Strings related to descriptions -->
    <string name="description_slide">Slide with property pictures</string>
    <string name="surface">Surface</string>
    <string name="trait_union" translatable="false">-</string>
    <string name="min" translatable="false">min</string>
    <string name="max" translatable="false">max</string>
    <string name="price">Price</string>
    <string name="rooms_filter">Rooms</string>
    <string name="action_goto_reset_password">Reset password</string>
    <string name="reset_suggestion">Password forgotten ?</string>
    <string name="password_reset_procedure">"If you have forgotten your password, you can enter your email in here and click the Reset password button.\n\nThis will send you an email with a password reset link that will let you change your password.\n    "</string>
    <string name="info_reset_successful">The reset procedure was successful. Check your mail !</string>
    <string name="error_reset_unsuccessful">An error has occurred during the password reset procedure. Please make
        sure you have a working internet connection</string>
    <string name="title_activity_reset">Reset</string>
    <string name="error_reset_no_email_matching">There does not exist an account with this email on the server.</string>
    <string name="no_internet_access">Internet is not available</string>
    <string name = "no_panorama_view">The panoramic view is not available offline.</string>

    <!-- Strings related to dialog windows -->
    <!-- Contact request -->
    <string name="button_contact_request">I want more details</string>
    <string name="dialog_contact_me_title">Contact request</string>
    <string name="dialog_contact_me_message">By further proceeding you accept that one of our brokers use your personal
    information in order to contact and provide you with all the details you may need.</string>
    <string name="accept_contact_me">Contact me</string>
    <string name="refuse_contact_me">Refuse</string>
    <string name="invalid_parse_object">There is an error on the server, please try again later</string>
    <string name="success_request">Request successful</string>


</resources>
