...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <ImageButton
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/LogOut"
            android:src="@drawable/logout"
...
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:drawableTop="@drawable/star_selector"
            />

        <ImageButton
            android:id="@+id/filterButtonPopUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorBackground"
            android:contentDescription="@string/Filter"
            android:src="@drawable/filter" />
    </LinearLayout>

    <ListView
        android:id="@+id/houseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorBackground"
        android:dividerHeight="6dp"
        android:listSelector="@drawable/item_selector"
        />
...
